--- a/index.html
+++ b/index.html
@@ -20,93 +20,252 @@
 </head>
 
 <body>
-  Features
-  Team
-  Sign In
 
-  All your files in one secure location, accessible anywhere.
+  <!-- PAGE HEADER -->
+  <header class="navbar">
+    <figure>
+      <img src="./assets/images/logo.svg" alt="Fylo_logo">
+    </figure>
 
-  Fylo stores all your most important files in one secure location. Access them wherever
-  you need, share and collaborate with friends family, and co-workers.
+    <!-- NAVIGATION -->
+    <nav class="navbar-nav">
+      <ul>
+        <li>Features</li>
+        <li>Team</li>
+        <li>Sign In</li>
+      </ul>
+    </nav>
+  </header>
 
-  Get Started
+  <main>
+    <section class="hero">
+      <figure>
+        <img class="hero-img" src="./assets/images/illustration-intro.png" alt="illustration-intro">
+        <!-- <img class="hero-img" src="./assets/images/bg-curvy-mobile.svg" alt="curvy"> -->
+      </figure>
+      <div class="hero-content">
+        <h2>All your files in one secure location, accessible anywhere.</h2>
+        <p>
+          Fylo stores all your most important files in one secure location. Access them wherever
+          you need, share and collaborate with friends family, and co-workers.
+        </p>
+      </div>
+      <button class="call-to-action">
+        Get Started
+      </button>
+    </section>
 
-  Access your files, anywhere
 
-  The ability to use a smartphone, tablet, or computer to access your account means your
-  files follow you everywhere.
+    <!-- ABOUT SECTION -->
+    <section class="about-us">
+      <div>
+        <div>
+          <figure>
+            <img src="./assets/images/icon-access-anywhere.svg" alt="access-anywhere">
+          </figure>
+          <h3>Access your files, anywhere</h3>
+          <p>
+            The ability to use a smartphone, tablet, or computer to access your account means your
+            files follow you everywhere.
+          </p>
+        </div>
+        <div>
+          <figure>
+            <img src="./assets/images/icon-security.svg" alt="security">
+          </figure>
+          <h3>Security you can trust</h3>
+          <p>
+            2-factor authentication and user-controlled encryption are just a couple of the security
+            features we allow to help secure your files.
+          </p>
+        </div>
+      </div>
 
-  Security you can trust
+      <div>
+        <div>
+          <figure>
+            <img src="./assets/images/icon-collaboration.svg" alt="collaboration">
+          </figure>
+          <h3>Real-time collaboration</h3>
+          <p>
+            Securely share files and folders with friends, family and colleagues for live collaboration.
+            No email attachments required.
+          </p>
+        </div>
+        <div>
+          <figure>
+            <img src="./assets/images/icon-any-file.svg" alt="any-file">
+          </figure>
+          <h3>Store any type of file</h3>
+          <p>
+            Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+            file types to be securely stored and shared.
+          </p>
+        </div>
+      </div>
+    </section>
 
-  2-factor authentication and user-controlled encryption are just a couple of the security
-  features we allow to help secure your files.
+    <!-- STAY-IN-TOUCH SECTION -->
+    <section class="stay-in-touch">
+      <figure>
+        <img src="./assets/images/illustration-stay-productive.png" alt="illustration-stay-productive">
+      </figure>
+      <h2>Stay productive, wherever you are</h2>
 
-  Real-time collaboration
+      <p>
+        Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+        storage needs.
+      </p>
 
-  Securely share files and folders with friends, family and colleagues for live collaboration.
-  No email attachments required.
+      <p>
+        Securely share files and folders with friends, family and colleagues for live collaboration. No email
+        attachments required.
+      </p>
 
-  Store any type of file
+      <a href="#">See how Fylo works</a>
+    </section>
 
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
-  file types to be securely stored and shared.
+    <!-- TESTIMONIALS SECTION -->
+    <section class="testimonials">
+      <div class="testimonial">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+          become a well-oiled collaboration machine.
+        </p>
+        <div>
+          <div>
+            <figure>
+              <img src="./assets/images/profile-1.jpg" alt="Satish Patel">
+            </figure>
+          </div>
+          <div>
+            <div>Satish Patel</div>
+            <div>Founder & CEO, Huddle</div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+          become a well-oiled collaboration machine.
+        </p>
+        <div>
+          <div>
+            <figure>
+              <img src="./assets/images/profile-2.jpg" alt="Bruce McKenzie">
+            </figure>
+          </div>
+          <div>
+            <div>Bruce McKenzie</div>
+            <div>Founder & CEO, Huddle</div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+          become a well-oiled collaboration machine.
+        </p>
+        <div>
+          <div>
+            <figure>
+              <img src="./assets/images/profile-3.jpg" alt="Iva Boyd">
+            </figure>
+          </div>
+          <div>
+            <div>Iva Boyd</div>
+            <div>Founder & CEO, Huddle</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  Stay productive, wherever you are
+    <!-- GET EARLY ACCESS SECTION -->
+    <section class="early-access">
+      <h3>Get early access today</h3>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+        questions, our support team would be happy to help you.
+      </p>
+      <input type="text" placeholder="email@example.com" required>
+      <button>Get Started For Free</button>
+    </section>
+  </main>
 
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <!-- FOOTER SECTION -->
+  <footer class="footer">
+    <figure>
+      <img src="./assets/images/logo.svg" alt="logo">
+    </figure>
+    <div>
+      <div class="location-info">
+        <div class="icon">location-ico</div>
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua
+        </div>
+      </div>
+      <div class="contact-info">
+        <div>
+          <div class="icon">phone-ico</div>
+          <div>+1-543-123-4567</div>
+        </div>
+        <div>
+          <div class="icon">email-ico</div>
+          <div>example@fylo.com</div>
+        </div>
+      </div>
+      <div class="page-nav">
+        <div>
+          <nav>
+            <ul>
+              <li><a>About Us</a></li>
+              <li><a>Jobs</a></li>
+              <li><a>Press</a></li>
+              <li><a>Blog</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <nav>
+            <ul>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Terms</a></li>
+              <li><a href="">Privacy</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="social-nav">
+        <nav>
+          <ul>
+            <li><a href="">
+                <figure>
+                  <img src="./assets/images/facebook.svg" alt="facebook">
+                </figure>
+              </a></li>
+            <li><a href="">
+                <figure>
+                  <img src="./assets/images/twitter.svg" alt="twitter">
+                </figure>
+              </a></li>
+            <li><a href="">
+                <figure>
+                  <img src="./assets/images/instagram.svg" alt="instagram">
+                </figure>
+              </a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </div>
   </footer>
+
 </body>
 
 </html>
