feat: flex structure for about-us

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </header>
 
   <main>
+    <!-- HERO SECTION -->
     <section class="hero">
       <figure>
         <img class="hero-img" src="./assets/images/illustration-intro.png" alt="illustration-intro">
@@ -58,8 +59,8 @@
 
     <!-- ABOUT SECTION -->
     <section class="about-us">
-      <div>
-        <div>
+      <div class="about-us-row">
+        <div class="about-us-tile">
           <figure>
             <img src="./assets/images/icon-access-anywhere.svg" alt="access-anywhere">
           </figure>
@@ -69,7 +70,7 @@
             files follow you everywhere.
           </p>
         </div>
-        <div>
+        <div class="about-us-tile">
           <figure>
             <img src="./assets/images/icon-security.svg" alt="security">
           </figure>
@@ -81,8 +82,8 @@
         </div>
       </div>
 
-      <div>
-        <div>
+      <div class="about-us-row">
+        <div class="about-us-tile">
           <figure>
             <img src="./assets/images/icon-collaboration.svg" alt="collaboration">
           </figure>
@@ -92,7 +93,7 @@
             No email attachments required.
           </p>
         </div>
-        <div>
+        <div class="about-us-tile">
           <figure>
             <img src="./assets/images/icon-any-file.svg" alt="any-file">
           </figure>
