wip: styling components

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- PAGE HEADER -->
   <header class="navbar">
     <figure>
-      <img src="./assets/images/logo.svg" alt="Fylo_logo">
+      <img class="logo" src="./assets/images/logo.svg" alt="Fylo_logo">
     </figure>
 
     <!-- NAVIGATION -->
@@ -45,15 +45,19 @@
         <!-- <img class="hero-img" src="./assets/images/bg-curvy-mobile.svg" alt="curvy"> -->
       </figure>
       <div class="hero-content">
-        <h2>All your files in one secure location, accessible anywhere.</h2>
+        <h1>All your files in one secure location, accessible anywhere.</h1>
         <p>
           Fylo stores all your most important files in one secure location. Access them wherever
           you need, share and collaborate with friends family, and co-workers.
         </p>
+        <button class="call-to-action">
+          Get Started
+        </button>
       </div>
-      <button class="call-to-action">
-        Get Started
-      </button>
+      <!-- <figure class="cury-bg">
+        <img class="desktop" src="./assets/images/bg-curvy-desktop.svg" alt="curvy-bg">
+        <img class="mobile" src="./assets/images/bg-curvy-mobile.svg" alt="curvy-bg">
+      </figure> -->
     </section>
 
 
@@ -108,40 +112,45 @@
 
     <!-- STAY-IN-TOUCH SECTION -->
     <section class="stay-in-touch">
-      <figure>
-        <img src="./assets/images/illustration-stay-productive.png" alt="illustration-stay-productive">
-      </figure>
-      <h2>Stay productive, wherever you are</h2>
-
-      <p>
-        Never let location be an issue when accessing your files. Fylo has you covered for all of your file
-        storage needs.
-      </p>
-
-      <p>
-        Securely share files and folders with friends, family and colleagues for live collaboration. No email
-        attachments required.
-      </p>
-
-      <a href="#">See how Fylo works</a>
+      <div>
+        <figure>
+          <img src="./assets/images/illustration-stay-productive.png" alt="illustration-stay-productive">
+        </figure>
+      </div>
+      <div>
+        <h2>Stay productive, wherever you are</h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+          storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. No email
+          attachments required.
+        </p>
+        <a class="external-link" href="#">See how Fylo works <img src="./assets/images/icon-arrow.svg"
+            class="icon-right"></a>
+      </div>
     </section>
 
     <!-- TESTIMONIALS SECTION -->
     <section class="testimonials">
+      <figure class="quotes">
+        <img src="./assets/images/bg-quotes.png" alt="bg-quotes">
+      </figure>
       <div class="testimonial">
         <p>
           Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
           become a well-oiled collaboration machine.
         </p>
-        <div>
-          <div>
+        <div class="user">
+          <div class="user-image">
             <figure>
               <img src="./assets/images/profile-1.jpg" alt="Satish Patel">
             </figure>
           </div>
-          <div>
-            <div>Satish Patel</div>
-            <div>Founder & CEO, Huddle</div>
+          <div class="user-detail">
+            <h4>Satish Patel</h4>
+            <p>Founder & CEO, Huddle</p>
           </div>
         </div>
       </div>
@@ -150,15 +159,15 @@
           Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
           become a well-oiled collaboration machine.
         </p>
-        <div>
-          <div>
+        <div class="user">
+          <div class="user-image">
             <figure>
               <img src="./assets/images/profile-2.jpg" alt="Bruce McKenzie">
             </figure>
           </div>
-          <div>
-            <div>Bruce McKenzie</div>
-            <div>Founder & CEO, Huddle</div>
+          <div class="user-detail">
+            <h4>Bruce McKenzie</h4>
+            <p>Founder & CEO, Huddle</p>
           </div>
         </div>
       </div>
@@ -167,15 +176,15 @@
           Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
           become a well-oiled collaboration machine.
         </p>
-        <div>
-          <div>
+        <div class="user">
+          <div class="user-image">
             <figure>
               <img src="./assets/images/profile-3.jpg" alt="Iva Boyd">
             </figure>
           </div>
-          <div>
-            <div>Iva Boyd</div>
-            <div>Founder & CEO, Huddle</div>
+          <div class="user-detail">
+            <h4>Iva Boyd</h4>
+            <p>Founder & CEO, Huddle</p>
           </div>
         </div>
       </div>
