feat: scss for all sections

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 
     <!-- STAY-IN-TOUCH SECTION -->
     <section class="stay-in-touch">
-      <div>
+      <div class="ls">
         <figure>
           <img src="./assets/images/illustration-stay-productive.png" alt="illustration-stay-productive">
         </figure>
       </div>
-      <div>
+      <div class="rs">
         <h2>Stay productive, wherever you are</h2>
         <p>
           Never let location be an issue when accessing your files. Fylo has you covered for all of your file
@@ -137,118 +137,134 @@
       <figure class="quotes">
         <img src="./assets/images/bg-quotes.png" alt="bg-quotes">
       </figure>
-      <div class="testimonial">
-        <p>
-          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-          become a well-oiled collaboration machine.
-        </p>
-        <div class="user">
-          <div class="user-image">
-            <figure>
-              <img src="./assets/images/profile-1.jpg" alt="Satish Patel">
-            </figure>
-          </div>
-          <div class="user-detail">
-            <h4>Satish Patel</h4>
-            <p>Founder & CEO, Huddle</p>
-          </div>
-        </div>
-      </div>
-      <div class="testimonial">
-        <p>
-          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-          become a well-oiled collaboration machine.
-        </p>
-        <div class="user">
-          <div class="user-image">
-            <figure>
-              <img src="./assets/images/profile-2.jpg" alt="Bruce McKenzie">
-            </figure>
-          </div>
-          <div class="user-detail">
-            <h4>Bruce McKenzie</h4>
-            <p>Founder & CEO, Huddle</p>
+      <div class="testimonial-cards">
+        <div class="testimonial">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.
+          </p>
+          <div class="user">
+            <div class="user-image">
+              <figure>
+                <img src="./assets/images/profile-1.jpg" alt="Satish Patel">
+              </figure>
+            </div>
+            <div class="user-detail">
+              <h4>Satish Patel</h4>
+              <p>Founder & CEO, Huddle</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="testimonial">
-        <p>
-          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-          become a well-oiled collaboration machine.
-        </p>
-        <div class="user">
-          <div class="user-image">
-            <figure>
-              <img src="./assets/images/profile-3.jpg" alt="Iva Boyd">
-            </figure>
+        <div class="testimonial">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.
+          </p>
+          <div class="user">
+            <div class="user-image">
+              <figure>
+                <img src="./assets/images/profile-2.jpg" alt="Bruce McKenzie">
+              </figure>
+            </div>
+            <div class="user-detail">
+              <h4>Bruce McKenzie</h4>
+              <p>Founder & CEO, Huddle</p>
+            </div>
           </div>
-          <div class="user-detail">
-            <h4>Iva Boyd</h4>
-            <p>Founder & CEO, Huddle</p>
+        </div>
+        <div class="testimonial">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.
+          </p>
+          <div class="user">
+            <div class="user-image">
+              <figure>
+                <img src="./assets/images/profile-3.jpg" alt="Iva Boyd">
+              </figure>
+            </div>
+            <div class="user-detail">
+              <h4>Iva Boyd</h4>
+              <p>Founder & CEO, Huddle</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- GET EARLY ACCESS SECTION -->
-    <section class="early-access">
-      <h3>Get early access today</h3>
-      <p>
-        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
-        questions, our support team would be happy to help you.
-      </p>
-      <input type="text" placeholder="email@example.com" required>
-      <button>Get Started For Free</button>
+    <section class="early-access-wrapper">
+      <div class="early-access">
+        <h3>Get early access today</h3>
+        <p>
+          It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+          questions, our support team would be happy to help you.
+        </p>
+        <div class="access-form">
+          <input type="email" placeholder="email@example.com" required>
+          <button class="call-to-action">Get Started For Free</button>
+        </div>
+      </div>
     </section>
   </main>
 
   <!-- FOOTER SECTION -->
   <footer class="footer">
-    <figure>
+    <figure class="logo">
       <img src="./assets/images/logo.svg" alt="logo">
     </figure>
-    <div>
-      <div class="location-info">
-        <div class="icon">location-ico</div>
+    <div class="footer-menus-wrapper">
+      <div class="info location-info d-flex">
+        <div class="icon icon-location">
+          <figure>
+            <img src="./assets/images/icon-location.svg" alt="location">
+          </figure>
+        </div>
         <div>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
           dolore magna aliqua
         </div>
       </div>
-      <div class="contact-info">
-        <div>
-          <div class="icon">phone-ico</div>
+      <div class="info contact-info">
+        <div class="d-flex">
+          <div class="icon icon-phone">
+            <figure>
+              <img src="./assets/images/icon-phone.svg" alt="phone">
+            </figure>
+          </div>
           <div>+1-543-123-4567</div>
         </div>
-        <div>
-          <div class="icon">email-ico</div>
+        <div class="d-flex">
+          <div class="icon icon-email">
+            <figure>
+              <img src="./assets/images/icon-email.svg" alt="email">
+            </figure>
+          </div>
           <div>example@fylo.com</div>
         </div>
       </div>
-      <div class="page-nav">
-        <div>
-          <nav>
-            <ul>
-              <li><a>About Us</a></li>
-              <li><a>Jobs</a></li>
-              <li><a>Press</a></li>
-              <li><a>Blog</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div>
-          <nav>
-            <ul>
-              <li><a href="">Contact Us</a></li>
-              <li><a href="">Terms</a></li>
-              <li><a href="">Privacy</a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <div class="social-nav">
+      <div class="footer-nav page-nav-1">
         <nav>
           <ul>
+            <li><a>About Us</a></li>
+            <li><a>Jobs</a></li>
+            <li><a>Press</a></li>
+            <li><a>Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-nav page-nav-2">
+        <nav>
+          <ul>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-nav social-nav">
+        <nav>
+          <ul class="d-flex">
             <li><a href="">
                 <figure>
                   <img src="./assets/images/facebook.svg" alt="facebook">
